--- a/css/main.css
+++ b/css/main.css
@@ -64,9 +64,12 @@ body {
 	font-size: 24px;
 	line-height: 45px;
 	font-family: comical;
+	width: 150px;
+	display: inline-block;
 }
 
-.click {
-	padding-top: 6em;
-}
+
+
+/*download comical font*/
+/*make separate divs*/
 
