--- a/css/main.css
+++ b/css/main.css
@@ -59,23 +59,28 @@ body {
 	left: 520px;
 }
 
+.text-content {
+	width: 1260px;
+}
+
 .how-to p {
 	color: black;
 	font-size: 24px;
-	line-height: 45px;
+	line-height: 36px;
 	font-family: comical;
 	display: inline-block;
+	text-transform: uppercase;
 }
 
 .click {
-	width: 174px;
+	width: 230px;
 	margin-left: -3em;
 	padding-top: 2em;
 }
 
 .hold {
-	width: 234px;
-	margin-right: 7em;
+	width: 214px;
+	margin-right: 9em;
 	padding-top: 8em;
 	float: right;
 }
